refactor work with roles in DataGenerator (minor fixes 4)