@@ -19,6 +19,7 @@ import ru.dexit.admindev.models.Role.AddRoleRequestModel;
 
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
 @DisplayName("Расширенные позитивные тесты")
@@ -295,7 +296,7 @@ public class ExtendedPositiveTests extends TestBase{
 
         AddRoleRequestModel requestBody = AddRoleRequestModel.builder()
                 .name(faker.company().profession() + "_" + DataGenerator.getSalt())
-                .policies(List.of(policy))
+                .policies(Collections.singletonList(policy))
                 .build();
         Response response = CoreApiMethodsRole.addRole(requestBody);
 
@@ -314,7 +315,7 @@ public class ExtendedPositiveTests extends TestBase{
 
         AddRoleRequestModel requestBody = AddRoleRequestModel.builder()
                 .name(faker.company().profession() + "_" + DataGenerator.getSalt())
-                .policies(List.of(policy))
+                .policies(Collections.singletonList(policy))
                 .build();
         Response response = CoreApiMethodsRole.addRole(requestBody);
 
